--- a/Sensitivity_Analysis_To_Publish_V2.Rmd
+++ b/Sensitivity_Analysis_To_Publish_V2.Rmd
@@ -769,14 +769,71 @@ slope.final.flag <- slope.final %>%
   relocate(Respiration_Rate_mg_DO_per_kg_per_H, .after = Sample_Name)
 
 outliers_flag <- left_join(boye_dev, slope.final.flag, by = c("Sample_Name", "Respiration_Rate_mg_DO_per_L_per_H", "Respiration_Rate_mg_DO_per_kg_per_H")) %>% 
-  mutate(flag = if_else(is.na(Mean_Slope_All_L),  "Remove Outlier", "N/A")) %>% 
-  dplyr::select(-c(Mean_Slope_All_L, Mean_Slope_All_kg, cv_before_removal_L, cv_before_removal_kg, kit_treat, cv_after_removal, Mean_Slope_Removed))
+  mutate(Methods_Deviation_flag = ifelse(cv_before_removal_L > 50,  "RATE_CV_050", NA)) %>%  
+   mutate(Methods_Deviation_outlier = ifelse(is.na(cv_before_removal_L) & is.na(Mean_Slope_All_L) & Respiration_Rate_mg_DO_per_L_per_H != -9999, "RATE_CV_050; RATE_CV_000", NA)) %>% 
+  mutate(Methods_Deviation_flag = ifelse(!is.na(Methods_Deviation_flag), Methods_Deviation_flag, Methods_Deviation_outlier)) %>% 
+  mutate(Methods_Deviation = ifelse(Methods_Deviation == "N/A", Methods_Deviation_flag, paste(Methods_Deviation, Methods_Deviation_flag, sep = "; "))) %>% 
+  mutate(Methods_Deviation = ifelse(is.na(Methods_Deviation), "N/A", Methods_Deviation)) %>% 
+    mutate(Methods_Deviation = ifelse(grepl("INC_008", Methods_Deviation), "INC_008", Methods_Deviation)) %>% 
+  dplyr::select(-c(Mean_Slope_All_L, Mean_Slope_All_kg, cv_before_removal_L, cv_before_removal_kg, kit_treat, cv_after_removal, Mean_Slope_Removed, flag, Methods_Deviation_flag, Methods_Deviation_outlier)) %>% 
+  mutate(DO_Concentration_At_Incubation_Time_Zero = round(as.numeric(DO_Concentration_At_Incubation_Time_Zero), 2)) 
 
 cv.threshold = 50
 rem.threshold = 3
 
-#write.csv(outliers_flag, "C:/GitHub/ECA_Multireactor_Incubations/Data/Cleaned Data/All_Respiration_Flagged.csv", row.names = F)
+eca_respiration_all_final = outliers_flag %>% 
+  mutate(Methods_Deviation = str_replace(Methods_Deviation, "; NA", "")) %>% 
+  mutate(Methods_Deviation)
+  
+
+write.csv(eca_respiration_all_final, "C:/Users/laan208/PNNL/Core Richland and Sequim Lab-Field Team - Documents/Data Generation and Files/ECA/INC/03_ProcessedData/ECA_Sediment_Incubations_Respiration_Rates_ReadyForBoye_2024-03-05.csv", row.names = F)
 
 ```
 
+```{r Summary File }
+
+cv <- function(x) {
+  cv_value <- (sd(x) / mean(x)) * 100
+  return(cv_value)
+}
+
+eca_summary_all = eca_respiration_all_final %>% 
+  filter(Respiration_Rate_mg_DO_per_L_per_H != -9999) %>% 
+  separate(Sample_Name, c("Sample", "Rep"), sep = -1) %>% 
+  dplyr::select(c(Sample, Material, SpC, pH, Temp, Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H)) %>% 
+  group_by(Sample) %>% 
+  summarise(across(where(is.numeric), list(mean = mean, sd = sd, cv = cv))) %>% 
+  mutate(round(across(where(is.numeric)), 3))
+
+eca_summary_best = eca_respiration_all_final %>% 
+  filter(Respiration_Rate_mg_DO_per_L_per_H != -9999) %>% 
+  filter(!grepl("RATE_CV_000", Methods_Deviation)) %>% 
+  separate(Sample_Name, c("Sample", "Rep"), sep = -1) %>% 
+  dplyr::select(c(Sample, Material,  Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H)) %>% 
+  group_by(Sample) %>% 
+  summarise(across(where(is.numeric), list(best_mean = mean, best_sd = sd, best_cv = cv))) %>% 
+  mutate(round(across(where(is.numeric)), 3))
+
+eca_summary_join = left_join(eca_summary_all, eca_summary_best, by = "Sample") %>% 
+  rename(Mean_Respiration_Rate_mg_DO_per_L_per_H = Respiration_Rate_mg_DO_per_L_per_H_mean) %>% 
+    rename(SD_Respiration_Rate_mg_DO_per_L_per_H = Respiration_Rate_mg_DO_per_L_per_H_sd) %>% 
+  rename(Mean_Respiration_Rate_mg_DO_per_kg_per_H = Respiration_Rate_mg_DO_per_kg_per_H_mean) %>% 
+    rename(SD_Respiration_Rate_mg_DO_per_kg_per_H = Respiration_Rate_mg_DO_per_kg_per_H_sd) %>% 
+  rename(Best_Mean_Respiration_Rate_mg_DO_per_L_per_H = Respiration_Rate_mg_DO_per_L_per_H_best_mean) %>% 
+   rename(Best_SD_Respiration_Rate_mg_DO_per_L_per_H = Respiration_Rate_mg_DO_per_L_per_H_best_sd) %>% 
+  rename(Best_Mean_Respiration_Rate_mg_DO_per_kg_per_H = Respiration_Rate_mg_DO_per_kg_per_H_best_mean) %>% 
+rename(Best_SD_Respiration_Rate_mg_DO_per_kg_per_H = Respiration_Rate_mg_DO_per_kg_per_H_best_sd) %>% 
+  rename(Mean_SpC = SpC_mean) %>%
+  rename(SD_SpC = SpC_sd) %>%
+  rename(Mean_pH = pH_mean) %>% 
+  rename(SD_pH = pH_sd) %>% 
+  rename(Mean_Temp = Temp_mean) %>% 
+  rename(SD_Temp = Temp_sd) %>% 
+  rename(Sample_Name = Sample) %>% 
+  mutate(Material = "Sediment") %>% 
+  dplyr::select(c(Sample_Name, Material, Mean_SpC, SD_SpC, Mean_pH, SD_pH, Mean_Temp, SD_Temp, Mean_Respiration_Rate_mg_DO_per_L_per_H, SD_Respiration_Rate_mg_DO_per_L_per_H, Mean_Respiration_Rate_mg_DO_per_kg_per_H, SD_Respiration_Rate_mg_DO_per_kg_per_H, Best_Mean_Respiration_Rate_mg_DO_per_L_per_H, Best_SD_Respiration_Rate_mg_DO_per_L_per_H, Best_Mean_Respiration_Rate_mg_DO_per_kg_per_H, Best_SD_Respiration_Rate_mg_DO_per_kg_per_H))
+
+write.csv(eca_summary_join, "C:/Users/laan208/PNNL/Core Richland and Sequim Lab-Field Team - Documents/Data Generation and Files/ECA/INC/03_ProcessedData/ECA_Sediment_Incubations_Respiration_Rates_Summary_ReadyForBoye_2024-03-05.csv", row.names = F)
+
+```
 
